# PhotoBatch

./: CMakeLists.txt  PhotoBatch.cpp  README.md
